--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             resultDiv.innerHTML = '<div class="loading">Searching Google Shopping...</div>';
 
             // Replace with your ScraperAPI key (keep the quotes!)
-            const API_KEY = "YOUR_SCRAPERAPI_KEY";
+            const API_KEY = "a4ee6156c39a100b5d4fb2727240e9f9";
             const encodedProduct = encodeURIComponent(product);
             
             try {
