--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <script>
         // Configuration
-        const API_KEY = "YOUR_SCRAPERAPI_KEY"; // Keep the quotes!
+        const API_KEY = "a4ee6156c39a100b5d4fb2727240e9f9"; // Keep the quotes!
         const TIMEOUT = 45000; // 45 seconds timeout
         
         // DOM Elements
